feat:jvm - method -area